fix : about page wrapping && add margin(test)

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -253,6 +253,7 @@ html {
   -ms-flex: none; /* <-- Fix IE footer issue */
   padding: $spacing-unit * 2 0;
   padding-top: 72px;
+  margin-bottom: 10vh;
 }
 
 .page-heading {
